--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ start: 2019-12-08
 end: 2019-12-08
 published: 2020-02-03
 url: http://proceedings.mlr.press
+author:
+  name: PMLR
 location: Vancouver, BC, Canada
 layout: proceedings
 series: Proceedings of Machine Learning Research
