--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ author:
   name: PMLR
 location: Vancouver, BC, Canada
 layout: proceedings
+publisher: PMLR
 series: Proceedings of Machine Learning Research
 issn: 2640-3498
 id: AABI-2019
