--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 ---
 booktitle: "Proceedings of The 2nd Symposium on\r Advances in Approximate Bayesian
   Inference"
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 shortname: AABI
 volume: 118
 year: '2019'
@@ -42,6 +43,10 @@ baseurl: "/v118"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+exclude:
+- README.md
+- Gemfile
+- ".gitignore"
 style: pmlr
 plugins:
 - jekyll-feed
@@ -68,6 +73,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
-orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
 # Original source:  /Users/neil/mlresearch/bibtex.bib
