--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ year: '2019'
 start: 2019-12-08
 end: 2019-12-08
 published: 2020-02-03
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 location: Vancouver, BC, Canada
